# pkmgr

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md
.gitea/workflows/: beta.yml  daily.yml  docker.yml  release.yml
.github/workflows/: build.yml  docker.yml
docker/: Dockerfile  docker-compose.yml
scripts/: bsd.sh  build.sh  clean.sh  debug.sh  install.sh  linux.sh  test.sh  windows.ps1
src/: main.rs  update.rs
src/binary/: downloader.rs  mod.rs
src/cache/: cleaner.rs  manager.rs  mod.rs  stats.rs
src/commands/: binary.rs  cache.rs  config.rs  doctor.rs  fix_commands.sh  info.rs  install.rs  iso.rs  language.rs  list.rs  mod.rs  profile.rs  recovery.rs  remove.rs  repos.rs  search.rs  shell.rs  sync.rs  update.rs  usb.rs  whatis.rs  where_pkg.rs
src/core/: config.rs  detector.rs  mod.rs  normalize.rs  normalizer.rs  platform.rs  privilege.rs  traits.rs  transaction.rs
src/doctor/: checker.rs  diagnostics.rs  mod.rs  report.rs
src/iso/: distributions.rs  manager.rs  mod.rs  verification.rs
src/languages/: executor.rs  installer.rs  mod.rs  resolver.rs
src/managers/: apt.rs  chocolatey.rs  dnf.rs  homebrew.rs  mod.rs  pacman.rs  scoop.rs  winget.rs
src/profile/: exporter.rs  importer.rs  manager.rs  mod.rs
src/recovery/: analyzer.rs  fixer.rs  mod.rs  strategies.rs
src/recovery/patterns/: arch.rs  common.rs  debian.rs  fedora.rs  mod.rs
src/repos/: config.rs  detector.rs  gpg.rs  manager.rs  mod.rs
src/shell/: completion.rs  detector.rs  integration.rs  mod.rs  symlinks.rs
src/ui/: mod.rs  output.rs  progress.rs  prompt.rs
src/usb/: bootloader.rs  device.rs  mod.rs  wizard.rs  writer.rs
src/utils/: archive.rs  crypto.rs  download.rs  mod.rs
tests/: build-test.sh  check-compile.sh  final_verification.sh  test-functionality.sh  test-incus.sh  test.sh
