[package]
name = "pkmgr"
version = "1.0.0"
edition = "2021"
authors = ["Jason Hempstead <jason@casjaysdev.pro>"]
description = "CasjaysDev Package Manager - Universal package manager with one consistent interface"
license = "MIT"
repository = "https://github.com/pkmgr/pkmgr"
homepage = "https://github.com/pkmgr/pkmgr"
readme = "README.md"
keywords = ["package-manager", "universal", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pkmgr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
regex = "1.10"
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
which = "4.4"
clap_complete = "4.4"
async-trait = "0.1"

# Essential dependencies with compatible versions
uuid = { version = "1.6", features = ["v4"] }
walkdir = "2.4"
tempfile = "3.8"
indicatif = "0.17"
dialoguer = "0.11"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls", "blocking"], default-features = false }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
bzip2 = "0.4"
semver = "1.0"
crossterm = "0.27"
atty = "0.2"
libc = "0.2"
fs2 = "0.4"
hostname = "0.3"
sys-info = "0.9"
num_cpus = "1.16"
shellexpand = "3.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal", "fs"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi"], optional = true }

[features]
default = []
static = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true